--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Additional files/directories to ignore.
+.idea/
+vertx-coroutines.iml
+.gradle/
+build/
+
+# Additional files/directories to unignore.
+!gradle/wrapper/gradle-wrapper.jar
